# bdgt

./: .gitignore  .gitmodules  Cargo.toml  README.md
.devcontainer/: Dockerfile  configure.sh  devcontainer.json
.github/workflows/: build.yml  rust.yml
doc/project/: architecture.md  vision.md
src/: binding.rs  commands.rs  console.rs  datetime.rs  error.rs  errors.rs  main.rs  misc.rs  timestamp.rs
src/command/: about.rs  add_account.rs  add_category.rs  add_plan.rs  add_transaction.rs  command.rs  common.rs  initialize.rs  mod.rs  remove_account.rs  remove_category.rs  remove_plan.rs  remove_transaction.rs  report.rs  service.rs  sync.rs  transfer.rs
