[package]
name = "bdgt"
version = "0.1.0"
edition = "2021"
authors = ["Georgy Firsov <gfirsov007@gmail.com>"]
repository = "https://github.com/GeorgyFirsov/bdgt"
homepage = "https://github.com/GeorgyFirsov/bdgt"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
itertools = "0.11.0"
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["cargo"] }

# backend library
libbdgt = { path = "./lib/libbdgt" }
