[package]
name = "bdgt"
version = "3.0.1"
edition = "2021"
authors = ["Georgy Firsov <gfirsov007@gmail.com>"]
repository = "https://github.com/GeorgyFirsov/bdgt"
homepage = "https://github.com/GeorgyFirsov/bdgt"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "0.10.0"
dateparser = "0.2.0"
dialoguer = "0.11.0"
itertools = "0.12.0"
pinentry = "0.5.0"
colored = "2.0.4"
secrecy = "0.8.0"
anyhow = "1.0.75"
chrono = "0.4.26"
uuid = "1.4.1"
minus = { version = "5.4.1", features = ["static_output", "search"] }
clap = { version = "4.4.0", features = ["cargo"] }

# backend library
libbdgt = { path = "./lib/libbdgt" }
